--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "9.0-secrets",
   "version": "1.0.0",
-  "description": "Authentication Level-1: Register and Login with just a username and password.",
+  "description": "",
   "main": "mySecret.js",
   "type": "module",
   "scripts": {
@@ -18,10 +18,13 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-session-sequelize": "^2.3.0",
     "md5": "^2.3.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2"
   }
 }
